# ComputerGeometry-Graphics

./: CMakeLists.txt  test.pnm  test1_b.pgm
LAB1/: main.cpp
LAB2/: main.cpp
LAB2_FULL/: main.cpp
LAB2_renovate/: CImage.cpp  CImage.h  CImageException.cpp  CImageException.h  CImageFileDeleteException.cpp  CImageFileDeleteException.h  CImageFileFormatException.cpp  CImageFileFormatException.h  CImageFileOpenException.cpp  CImageFileOpenException.h  CImageFileReadException.cpp  CImageFileReadException.h  CImageIO.cpp  CImageIO.h  CImageMemAllocException.cpp  CImageMemAllocException.h  CImageParamsException.cpp  CImageParamsException.h  CircleSample.cpp  GammaLinesSample.cpp  Lab2_Full.cpp  draw_line.cpp
LAB3/: CDitherer.h  CImage.h  CImageException.h  CImageFileDeleteException.cpp  CImageFileFormatException.cpp  CImageFileReadException.h  CImageMemAllocException.h  Lab3_full.cpp  Lab3_full_color.cpp  MultiTest.cpp  main.cpp  test.cpp
LAB4/: CImage.h  CImageException.cpp  CImageFileOpenException.cpp  CImageFileOpenException.h  CImageFileReadException.cpp  CImageParamsException.h  CPixel.cpp  CPixel.h  CSpace.cpp  CSpace.h  Lab4.cpp
